<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeiboPerson</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="tab_home">首頁</string>
    <string name="tab_msg">信息</string>
    <string name="tab_my">我</string>
    <string name="not_network">没有网络</string>
    

    <!-- weibo sdk -->
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="title_activity_main1">MainActivity</string>

    <!-- 刷新&加載 -->
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">加载更多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">放开以更新</string>
    <string name="p2refresh_pull_to_refresh">下拉以更新</string>
    <string name="p2refresh_doing_head_refresh">资料更新中&#8230;</string>
    <string name="p2refresh_doing_end_refresh">资料更新中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最後更新&#160;&#058;&#160;</string>

    <!-- Home Page -->
    <string name="share">转发</string>
    <string name="comment">评论</string>
    <string name="praise">赞</string>
    <string name="mine">我</string>
    <string name="loaction">位置</string>    
    <string name="sent">发表</string>    
    <string name="sent_weico">发微博</string>
    
    <!--ImageView detail-->
    <string name="viewpager_indicator">%1$d/%2$d</string>
	<string name="article">正文</string>
    <!-- MessagePage -->
    <string name="at_mine"><p>@我的</p></string>
	<string name="message">信息</string>
    <!-- Base -->

    <string-array name="isMobile">
        <item>133</item>
        <item>153</item>
        <item>170</item>
        <item>177</item>
        <item>180</item>
        <item>181</item>
        <item>189</item>
        <item>130</item>
        <item>131</item>
        <item>132</item>
        <item>155</item>
        <item>156</item>
        <item>176</item>
        <item>185</item>
        <item>186</item>
        <item>145</item>
        <item>134</item>
        <item>135</item>
        <item>136</item>
        <item>137</item>
        <item>138</item>
        <item>139</item>
        <item>150</item>
        <item>151</item>
        <item>152</item>
        <item>157</item>
        <item>158</item>
        <item>159</item>
        <item>182</item>
        <item>183</item>
        <item>184</item>
        <item>187</item>
        <item>188</item>
        <item>147</item>
    </string-array>

    <string-array name="operate">
        <item>收藏</item>
        <item>帮上头条</item>
        <item>移除分组</item>
        <item>取消关注</item>
        <item>屏蔽</item>
        <item>举报</item>     
    </string-array>
        <string name="bottome_menu">BottomView</string>
    <string name="title_activity_tpi">MainActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
	
</resources>
