<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <fragment
                android:id="@+id/fragment_home"
                android:name="com.charles.weibo.module.homepage.HomeFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
              <fragment
                android:id="@+id/fragment_cardcase"
                android:name="com.charles.weibo.module.message.MessageFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <fragment
                android:id="@+id/fragment_more"
                android:name="com.charles.weibo.module.profiles.MyWeiboFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" /> 
        </FrameLayout>
    <TabWidget
        android:id="@android:id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:visibility="gone" >
    </TabWidget>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.67dp"
        android:background="#d7d7d7" />

    <RadioGroup
        android:id="@+id/tab_radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="50.6667dp"
        android:layout_gravity="bottom"
        android:background="#f7f7f7"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:button="@null"
            android:checked="true"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/tab_btn_img"
            android:ellipsize="marquee"
            android:gravity="center_horizontal"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:singleLine="true"
            android:text="@string/tab_home"
            android:textColor="@drawable/tab_main_btn_text"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/rb_cont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:button="@null"
            android:checked="false"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/tab_btn_cont"
            android:ellipsize="marquee"
            android:gravity="center_horizontal"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:singleLine="true"
            android:text="@string/tab_msg"
            android:textColor="@drawable/tab_main_btn_text"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/rb_setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:button="@null"
            android:checked="false"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/tab_btn_more"
            android:ellipsize="marquee"
            android:gravity="center_horizontal"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:singleLine="true"
            android:text="@string/tab_my"
            android:textColor="@drawable/tab_main_btn_text"
            android:textSize="11sp" />
    </RadioGroup>
 </LinearLayout> 
</TabHost>