<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/bg_while">

    <include layout="@layout/home_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <View android:layout_width="match_parent"
        android:layout_height="0.666667dp"
        android:background="@color/font_light_gray"/>
   <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/pop_following_background_selector"
        android:clickable="true"
        android:layout_marginTop="5dp"
        >
        <ImageView 
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:src="@drawable/messagescenter_at"
            android:layout_margin="10dp"
            />
        
        <TextView
            android:layout_width="0dp" 
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/at_mine"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16"
            />
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/mini_webview_forward_disable"
            android:layout_margin="10dp"
            />
        
    </LinearLayout> 
   <!--  <View android:layout_width="match_parent"
        android:layout_height="0.666667dp"
        android:background="@color/font_light_gray"/> -->
    <LinearLayout 
        android:id="@+id/layComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/pop_following_background_selector"
        android:clickable="true"
        >
        <ImageView 
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/messagescenter_comments"
            android:layout_margin="10dp"
            />
        
        <TextView
            android:layout_width="0dp" 
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16"
            />
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mini_webview_forward_disable"
            android:layout_margin="10dp"
            />
        
    </LinearLayout>
    
   <!--  <View android:layout_width="match_parent"
        android:layout_height="0.666667dp"
        android:background="@color/font_light_gray"/>
     -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/pop_following_background_selector"
        android:clickable="true"
        >
        <ImageView 
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/messagescenter_good"
            android:layout_margin="10dp"
            />
        
        <TextView
            android:layout_width="0dp" 
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/praise"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16"
            />
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mini_webview_forward_disable"
            android:layout_margin="10dp"
            />
        
    </LinearLayout>
    
 	<!-- <View android:layout_width="match_parent"
        android:layout_height="0.666667dp"
        android:background="@color/font_light_gray"/> -->

</LinearLayout>
